<resources>
    <string name="app_name">Quiz App</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="geography_quiz">GEOGRAPHY QUIZ</string>
    <string name="first_question">What is the capital of Norway?</string>
    <string name="first_question_answer_a">Buenos Aires</string>
    <string name="first_question_answer_b">Oslo</string>
    <string name="first_question_answer_c">Washington</string>
    <string name="first_question_answer_d">Estocolmo</string>
    <string name="second_question">What is the capital of Nicaragua?</string>
    <string name="second_question_answer_a">Manágua</string>
    <string name="second_question_answer_b">Brasilia</string>
    <string name="second_question_answer_c">San José</string>
    <string name="second_question_answer_d">San Salvador</string>
    <string name="third_question">What is the capital of South Korea?</string>
    <string name="third_question_answer_a">Hong Kong</string>
    <string name="third_question_answer_b">Daegu</string>
    <string name="third_question_answer_c">Busan</string>
    <string name="third_question_answer_d">Seul</string>
    <string name="fourth_question">What is the capital of Japan?</string>
    <string name="fourth_question_answer_a">Kyoto</string>
    <string name="fourth_question_answer_b">Tokyo</string>
    <string name="fourth_question_answer_c">Osaka</string>
    <string name="fourth_question_answer_d">Minato</string>
    <string name="fifth_question">What is the capital of Butan?</string>
    <string name="fifth_question_answer_a">Punakha</string>
    <string name="fifth_question_answer_b">Paro</string>
    <string name="fifth_question_answer_c">Thimphu</string>
    <string name="fifth_question_answer_d">Puntshol</string>
    <string name="sixth_question">Which cities are located in Brazil? (Double Points! - Lose points if you check wrong answer)</string>
    <string name="sixth_question_answer_a">Brasilia</string>
    <string name="sixth_question_answer_b">Belo Horizonte</string>
    <string name="sixth_question_answer_c">Califórnia</string>
    <string name="sixth_question_answer_d">Flórida</string>
    <string name="sixth_question_answer_e">Paro</string>
    <string name="finish_quiz">FINISH QUIZ</string>
    <string name="seventh_question">How many countries are recognized by the U.N?</string>
    <string name="quantity">Quantity</string>
</resources>
